fix(reply modal): wrap search status text

--- a/src/components/reply-modal/reply-modal.module.css
+++ b/src/components/reply-modal/reply-modal.module.css
@@ -163,4 +163,5 @@
   color: var(--post-link-text-color);
   padding: 3px 5px;
   margin-top: 1px;
+  overflow-wrap: anywhere;
 }
